Criando o branch sonarlint, será utilizado para correções apontadas pela análise do SonarLint