@@ -6,18 +6,19 @@ import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
+import java.util.List;
+import java.util.stream.Collectors;
+
 @RestControllerAdvice
 public class TratadorDeErros {
 	
-	/* Aqui é pra tratar erro de validação. Por padrão, uma exception dessas traz VAAAAARIOS DADOS, mas pra ficar melhor 
-	 * Pra cada um dos erros, eu vou filtrar eles usando o DTO abaixo e retornando apenas os campos de mensagem e campo em si*/
 	@ExceptionHandler(MethodArgumentNotValidException.class)
-	public ResponseEntity<?> tratarErro400(MethodArgumentNotValidException ex) {
+	public ResponseEntity<List<DadosErroValidacao>> tratarErro400(MethodArgumentNotValidException ex) {
 		var erros = ex.getFieldErrors();
-		return ResponseEntity.badRequest().body(erros.stream().map(DadosErroValidacao::new).toList());
+		List<DadosErroValidacao> dadosErroValidacaoList = erros.stream().map(DadosErroValidacao::new).collect(Collectors.toList());
+		return ResponseEntity.badRequest().body(dadosErroValidacaoList);
 	}
 	
-	/* DTO Para definir quais dados devem ser retornados dos objetos de erros por validação. No caso só a mensagem e o campo tá bom */
 	private record DadosErroValidacao(String campo, String mensagem) {
 		
 		public DadosErroValidacao(FieldError erro) {
@@ -25,5 +26,4 @@ public class TratadorDeErros {
 		}
 		
 	}
-	
 }
